@@ -1,1 +1,1 @@
-a:3:{s:4:"time";s:16:"2018-10-15 04:18";s:6:"status";s:1:"1";s:5:"catid";i:255;}
+a:3:{s:4:"time";s:16:"2018-10-21 13:15";s:6:"status";s:1:"1";s:5:"catid";a:1:{s:2:"id";i:3;}}
