@@ -18,6 +18,7 @@ $lang = [
     'casino.php' => 'Casino',
     'catalog.php' => 'Torrent Catalog',
     'chat.php' => 'IRC',
+    'comment.php' => 'Comments',
     'contactstaff.php' => 'Contact Staff',
     'details.php' => 'Torrent Details',
     'donate.php' => 'Donation',
@@ -53,6 +54,7 @@ $lang = [
     'view_mailbox' => 'View Mailboxes',
     'upload.php' => 'Upload Torrent',
     'uploadapp.php' => 'Uploaders App',
+    'usercomment.php' => 'User Comments',
     'usercp.php' => 'User Control Panel',
     'userdetails.php' => 'User Details',
     'users.php' => 'Search Users',
