@@ -1,14 +1,13 @@
-.sceditor-container {
-    border: 1px solid #ff3860;
-    border-radius: .625em;
-    margin: .625em .625em 0 .625em;
+.sceditor-container,
+.sceditor-container textarea,
+div.sceditor-toolbar {
+    border: none;
+    border-radius: 0;
 }
 
 div.sceditor-toolbar {
-    border-radius: .625em .625em 0 0;
-    background: rgba(250, 250, 250, .75);
-    background: linear-gradient(to bottom, rgba(250, 250, 250, .75) 0%, rgba(246, 246, 246, .65) 47%, rgba(237, 237, 237, .5) 100%);
-    border: none;
+    background: #7d7e7d;
+    background: linear-gradient(to bottom, #7d7e7d 0, #0e0e0e 100%);
 }
 
 .sceditor-container iframe,
